# dtuhpc

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.toml
.github/workflows/: bump2version.yml  bumpversion.yml  check-version-bump.yml  coverage.yml  flake8.yml  isort.yml  python-publish.yml  release.yml  tests.yml
default_jobs/: init-pip.toml  init-poetry.toml  test.toml
dtuhpc/: __init__.py  connector.py  console.py
dtuhpc/cli/: cli.py  cli_config.py  cli_context.py  server_commands_cli.py
dtuhpc/cli/commands/: __init__.py  auth.py  deploy.py  exec.py  init.py  parse.py  server_command.py  ssh.py
dtuhpc/cli/commands/server/: __init__.py  bkill.py  bqueues.py  bstat.py  bsub.py  nodestat.py  showstart.py
dtuhpc/commands/: __init__.py  bkill.py  bqueues.py  bstat.py  bsub.py  command.py  nodestat.py  showstart.py
dtuhpc/jobwriter/: commands.py  job_reader.py  job_writer.py  options.py
dtuhpc/jobwriter/commands/: __init__.py  activate_conda_environment_command.py  command.py  load_module_command.py
dtuhpc/jobwriter/options/: __init__.py  core_block_size_option.py  core_ptile_size_option.py  email_for_notifications_option.py  error_output_file_path_option.py  memory_per_core_kill_limit_option.py  memory_per_core_option.py  n_cpu_cores_option.py  name_option.py  option.py  queue_option.py  send_notification_at_end_option.py  send_notification_at_start_option.py  single_host_option.py  standard_output_file_path_option.py  use_gpu_option.py  wall_time_option.py
dtuhpc/outputs/: __init__.py  bkill_output.py  bqueues_output.py  bstat_output.py  bsub_output.py  nodestat_output.py  output.py  showstart_output.py  table.py
test_jobs/: test.job.py
tests/: test_test.py
tests/commands/: bstat.py
